Add links to navigate around website from individual recipes

--- a/pages/corn-casserole.html
+++ b/pages/corn-casserole.html
@@ -6,6 +6,12 @@
     </head>
 
     <body>
+        Recipes:
+        <a href="../index.html">Home Page</a>
+        <a href="./corn-casserole.html">Corn Casserole</a>
+        <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
+        <a href="./sweet-beef.html">Sweet Beef & Rice</a>
+
         <h1>The Cosmic Corn Casserole</h1>
         <img src="../images/corncasserole.jpg" alt="image of the corn casserole" height="500" width="400">
         <h3>Description</h3>
@@ -20,7 +26,7 @@
             <li>1 (8 oz) package corn muffin mix</li>
             <li>medium shredded cheddar cheese</li>
         </ul>
-        
+
         <h3>Directions:</h3>
         <ol>
             <li>In a large bowl, stir together the two cans of corn, corn muffin mix, sour cream, and butter.</li>
