--- a/pages/hawaiian-ham.html
+++ b/pages/hawaiian-ham.html
@@ -6,6 +6,12 @@
     </head>
 
     <body>
+        Recipes:
+        <a href="../index.html">Home Page</a>
+        <a href="./corn-casserole.html">Corn Casserole</a>
+        <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
+        <a href="./sweet-beef.html">Sweet Beef & Rice</a>
+
         <h1>The Heavenly Hawaiian Sweet Rolls</h1>
         <img src="../images/hawaiianham.jpg" alt="image of the hawaiian ham" height="500" width="400">
         <h3>Description</h3>
