--- a/pages/corn-casserole.html
+++ b/pages/corn-casserole.html
@@ -11,6 +11,7 @@
         <a href="./corn-casserole.html">Corn Casserole</a>
         <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
         <a href="./sweet-beef.html">Sweet Beef & Rice</a>
+        <a href="./combination.html">The Scrumpheavenly Cosmiham Corn</a>
 
         <h1>The Cosmic Corn Casserole</h1>
         <img src="../images/corncasserole.jpg" alt="image of the corn casserole" height="500" width="400">
