--- a/pages/hawaiian-ham.html
+++ b/pages/hawaiian-ham.html
@@ -11,6 +11,7 @@
         <a href="./corn-casserole.html">Corn Casserole</a>
         <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
         <a href="./sweet-beef.html">Sweet Beef & Rice</a>
+        <a href="./combination.html">The Scrumpheavenly Cosmiham Corn</a>
 
         <h1>The Heavenly Hawaiian Sweet Rolls</h1>
         <img src="../images/hawaiianham.jpg" alt="image of the hawaiian ham" height="500" width="400">
