--- a/pages/sweet-beef.html
+++ b/pages/sweet-beef.html
@@ -11,6 +11,7 @@
         <a href="./corn-casserole.html">Corn Casserole</a>
         <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
         <a href="./sweet-beef.html">Sweet Beef & Rice</a>
+        <a href="./combination.html">The Scrumpheavenly Cosmiham Corn</a>
 
         <h1>The Scrumptious Sweet Beef and Rice</h1>
         <img src="../images/sweetbeef.jpg" alt="image of the sweet beef and rice" height="500" width="400">
