Add CSS to each page of website!

--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <title>Tyler's Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        Recipes:
-        <a href="./pages/corn-casserole.html">Corn Casserole</a>
-        <a href="./pages/hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
-        <a href="./pages/sweet-beef.html">Sweet Beef & Rice</a>
-        <a href="./pages/combination.html">The Scrumpheavenly Cosmiham Corn</a>
+        <topbar class="intro">Recipes:</topbar>
+        <a href="./pages/corn-casserole.html" class="links">Corn Casserole</a>
+        <a href="./pages/hawaiian-ham.html" class="links">Hawaiian Ham Sandwiches</a>
+        <a href="./pages/sweet-beef.html" class="links">Sweet Beef & Rice</a>
+        <a href="./pages/combination.html" class="links">The Scrumpheavenly Cosmiham Corn</a>
 
-        <h1>Tyler's Favorite Recipes</h1>
+        <h1 class="intro title">Tyler's Favorite Recipes</h1>
 
-        <p>Hey I'm Tyler! This website has been made to share my favorite recipes that are easy to make, and share them with you :)</p>
-        <p>Click the links are the top of this page to get to different recipes, or click on the images down below!</p>
+        <p class="intro">Hey I'm Tyler! This website has been made to share my <em>favorite</em> recipes that are easy to make, and share them with you :)</p>
+        <p class="intro">Click the links are the top of this page to get to different recipes, or click on the images down below!</p>
 
         <p></p>
 
-        <h3>The Cosmic Corn Casserole</h3>
-        <a href="./pages/corn-casserole.html"> <img src="./images/corncasserole.jpg" alt="Image of the corn cassrole" height="300" width="400"></a>
+        <h3 class="name">The Classic Corn Casserole</h3>
+        <a href="./pages/corn-casserole.html" class="picture"> <img src="./images/corncasserole.jpg" alt="Image of the corn cassrole" height="300" width="400"></a>
 
-        <h3>The Heavenly Hawaiian Ham Sandwiches</h3>
-        <a href="./pages/hawaiian-ham.html"> <img src="./images/hawaiianham.jpg" alt="Image of the hawaiian ham sandwiches" height="300" width="400"></a>
+        <h3 class="name">The Heavenly Hawaiian Ham Sandwiches</h3>
+        <a href="./pages/hawaiian-ham.html" class="picture"> <img src="./images/hawaiianham.jpg" alt="Image of the hawaiian ham sandwiches" height="300" width="400"></a>
 
-        <h3>The Scrumptious Sweet Beef and Rice</h3>
-        <a href="./pages/sweet-beef.html"> <img src="./images/sweetbeef.jpg" alt="Image of the sweet beef and rice" height="300" width="400"></a>
+        <h3 class="name">The Scrumptious Sweet Beef and Rice</h3>
+        <a href="./pages/sweet-beef.html" class="picture"> <img src="./images/sweetbeef.jpg" alt="Image of the sweet beef and rice" height="300" width="400"></a>
     </body>
 </html>
