--- a/pages/combination.html
+++ b/pages/combination.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Tyler's Recipes | The Scrumpheavenly Cosmiham Corn</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        Recipes:
+        <topbar class="intro">Recipes:</topbar>
         <a href="../index.html">Home Page</a>
         <a href="./corn-casserole.html">Corn Casserole</a>
         <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
         <a href="./sweet-beef.html">Sweet Beef & Rice</a>
         <a href="./combination.html">The Scrumpheavenly Cosmiham Corn</a>
 
-        <h1>The Scrumpheavenly Cosmiham Corn</h1>
-        <img src="../images/sweetbeef.jpg" alt="image of the scrumpheavenly cosmiham corn" height="500" width="400">
+        <h1 class="name">The Scrumpheavenly Cosmiham Corn</h1>
         <h3>Description</h3>
         <p>This incredible dish combines all of my favorite flavors into one amalgamation, resulting in a cacophony delicious sensations on your taste buds.</p>
 
