--- a/pages/corn-casserole.html
+++ b/pages/corn-casserole.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Tyler's Recipes | Corn Casserole</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        Recipes:
+        <topbar class="intro">Recipes:</topbar>
         <a href="../index.html">Home Page</a>
         <a href="./corn-casserole.html">Corn Casserole</a>
         <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
         <a href="./sweet-beef.html">Sweet Beef & Rice</a>
         <a href="./combination.html">The Scrumpheavenly Cosmiham Corn</a>
 
-        <h1>The Cosmic Corn Casserole</h1>
+        <h1 class="name">The Classic Corn Casserole</h1>
         <img src="../images/corncasserole.jpg" alt="image of the corn casserole" height="500" width="400">
         <h3>Description</h3>
         <p>This simple holiday side dish is a southern corn casserole recipe from Paula Deen. Ingredients include whole kernels, cream-style corn and a box of corn muffin mix.</p>
