--- a/pages/hawaiian-ham.html
+++ b/pages/hawaiian-ham.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Tyler's Recipes | Hawaiian Ham Sandwiches</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        Recipes:
+        <topbar class="intro">Recipes:</topbar>
         <a href="../index.html">Home Page</a>
         <a href="./corn-casserole.html">Corn Casserole</a>
         <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
         <a href="./sweet-beef.html">Sweet Beef & Rice</a>
         <a href="./combination.html">The Scrumpheavenly Cosmiham Corn</a>
 
-        <h1>The Heavenly Hawaiian Sweet Rolls</h1>
+        <h1 class="name">The Heavenly Hawaiian Sweet Rolls</h1>
         <img src="../images/hawaiianham.jpg" alt="image of the hawaiian ham" height="500" width="400">
         <h3>Description</h3>
         <p>Looking for the perfect anytime appetizer? Look no further than the iconic Ham and Swiss Sliders! These Ham and Cheese Sliders recipe brings you the ultimate combination of irrestistible flavors and buttery goodness. These deliciously sweet and savorit sliders and perfect for Slider Sunday, game day gatherings, summer cookouts, and everything in between.</p>
