--- a/pages/sweet-beef.html
+++ b/pages/sweet-beef.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Tyler's Recipes | Sweet Beef</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        Recipes:
+        <topbar class="intro">Recipes:</topbar>
         <a href="../index.html">Home Page</a>
         <a href="./corn-casserole.html">Corn Casserole</a>
         <a href="./hawaiian-ham.html">Hawaiian Ham Sandwiches</a>
         <a href="./sweet-beef.html">Sweet Beef & Rice</a>
         <a href="./combination.html">The Scrumpheavenly Cosmiham Corn</a>
 
-        <h1>The Scrumptious Sweet Beef and Rice</h1>
+        <h1 class="name">The Scrumptious Sweet Beef and Rice</h1>
         <img src="../images/sweetbeef.jpg" alt="image of the sweet beef and rice" height="500" width="400">
         <h3>Description</h3>
         <p>This sweet and spicy <strong>Korean Ground Beef</strong> can be on the table in about 20 minutes, so it is perfect for busy weeknight dinners! Serve it over cooked rice for a tasty dinner the whole family will love.</p>
